2009-09-11:
===========

- Another fix for the overlay button in the TinyMCE plugin. This time, the fix 
is for Webkit. Yesterday's change did include a regression in Webkit-based 
browsers: the overlay button was not showing up at all.

2009-09-10:
===========

- Made some improvements to the TinyMCE plugin, with regards to the overlay 
button.
- Worked around a problem which caused the overlay button to no longer show up 
in Opera 10 final. The Opera bug is related to losing image selection, due to 
the use of queryCommandState, DOM changes, and mouse events. See Opera bug 
DSK-265135 and TC: http://www.robodesign.ro/coding/0064/

2009-08-27:
===========

- Fixed a Text tool drawing bug which affected Gecko-based browsers. See 
https://bugzilla.mozilla.org/show_bug.cgi?id=478445

2009-08-26:
===========

- Fixed a performance regression on the OLPC XO. The new checkers background 
used for making transparency obvious ... also causes a performance decrease. The 
solution is to disable the background image on the OLPC XO.

- Added a new configuration option to allow enabling/disabling of the checkers 
background image.

2009-08-24:
===========

- Fixed the simple demo to "work" in MSIE. That is: it should nicely tell the 
user that PaintWeb does not work. Before this update, the scripts had JS 
"errors".

- Improved the Bézier curve. When only two points were available, the line drawn 
didn't use the correct color.

- Fixed an image save bug. At times it did "err", because the first argument of 
the imageSave() method is a DOM event object instead of a string when invoked as 
a command from the toolbar.

2009-08-23:
===========

- Fixed the config JSON files. Now PaintWeb loads in Safari 4, once again.  
Thanks to Dan Poltawski for his bug report and his time for testing.

- The Moodle extension now displays a quickform validation error when the user 
tries to submit a form while editing an image with unsaved changes, as suggested 
by Martin Langhoff.
