@@ -18,7 +18,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-08-11 14:29:31 +0300 $
+ * $Date: 2009-10-07 15:16:47 +0300 $
  */
 
 // This script serves images saved by PaintWeb to the browser.
@@ -26,7 +26,7 @@
 // This script only works with Moodle 1.9.
 
 require_once('../../../../config.php');
-require_once('../../../../lib/filelib.php');
+require_once($CFG->libdir . '/filelib.php');
 
 // disable moodle specific debug messages
 disable_debugging();
